updated demo page with delete command

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,6 +47,13 @@
 			<p>Submit: <input type="submit" value="read file"/></p>
 		</form>
 
+		<p>Delete a file from the repo.</p>
+		<form id="deleteFromRepo">
+			<p>Filename: <input type="text" id="deleteFile"/></p>
+			<p>Submit: <input type="submit" value="delete file"/></p>
+		</form>
+		
+
 		<p>Create a new tag in the repo</p>
 		<form id="tagRepo">
 			<p>Submit: <input type="submit" value="tag repo"/></p>
