demos for resetting repo

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,6 +54,13 @@
 		</form>
 		
 
+		<p>Reset repo to tag</p>
+		<form id="resetRepo">
+			<p>Tag: <input type="text" id="resetTag"/></p>
+			<p>Submit: <input type="submit" value="reset repo"/></p>
+		</form>
+		
+
 		<p>Create a new tag in the repo</p>
 		<form id="tagRepo">
 			<p>Submit: <input type="submit" value="tag repo"/></p>
