Used a jsonview component for showing the results in the demo index page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
+<link rel="stylesheet" href="jquery.jsonview.css" />
 <script type="text/javascript"
 	src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+ <script type="text/javascript" src="jquery.jsonview.js"></script>
 <script type="text/javascript" src="index.js"></script>
-</head>
+ </head>
 
 <body>
 
@@ -87,8 +89,7 @@
 	</div>
 
 	<div style="float: left; width: 20em">
-		<div id="assignmentsList">
-			<pre></pre>
+		<div id="json">
 		</div>
 
 		<div id="error" style="color: red">
