Added api call for listing the tags in a repository

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,11 @@
 			<p><input type="submit" value="Start task" /></p>
 		</form>
 
+		<p>List tags in repo</p>
+		<form id="listRepoTags">
+			<p><input type="submit" value="List tags"/></p>
+		</form>
+
 		<p>List files in repo</p>
 		<form id="listRepo">
 			<p><input type="submit" value="List files" /></p>
