Refactored most of the work from TaskManager into Task following the same pattern as Repo Also replaced store with Worker

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,11 +19,11 @@
 		
 		<h2>Tasks</h2>
 		
-		<input type="submit" value="List tasks" id="listTasksButton" /><br />
-		<input type="submit" value="List released tasks" id="listReleasedTasksButton" /><br />
+		<input type="submit" value="List testing tasks" id="listTestingTasksButton" /><br />
+		<input type="submit" value="List registered tasks" id="listRegisteredTasksButton" /><br />
 		<input type="submit" value="List retiredTasks" id="listRetiredTasksButton" /><br />
 		<input type="submit" value="Create new task" id="createTaskButton" /><br />
-		<input type="submit" value="Release task" id="releaseTaskButton" /><br />
+		<input type="submit" value="Register task" id="registerTaskButton" /><br />
 		<hr />
 
 		<h2>Repositories</h2>
