--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,6 +23,7 @@
 		<input type="submit" value="List registered tasks" id="listRegisteredTasksButton" /><br />
 		<input type="submit" value="List retiredTasks" id="listRetiredTasksButton" /><br />
 		<input type="submit" value="Create new task" id="createTaskButton" /><br />
+		<input type="submit" value="Update testing version of task" id="testTaskButton"/> <br/>
 		<input type="submit" value="Register task" id="registerTaskButton" /><br />
 		<hr />
 
