Task registration now happens asynchronously

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,7 @@
 		<input type="submit" value="Create new task" id="createTaskButton" /><br />
 		<input type="submit" value="Update testing version of task" id="testTaskButton"/> <br/>
 		<input type="submit" value="Register task" id="registerTaskButton" /><br />
+		<input type="submit" value="Poll registration process" id="pollRegistrationButton" /><br />
 		<hr />
 
 		<h2>Repositories</h2>
