Added api option for using testing mode task

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,11 @@
 			<p><input type="submit" value="Start task" /></p>
 		</form>
 
+		<form id="startTestingTaskForm">
+			<p><input type="submit" value="Start task (use testing version of task)" /></p>
+		</form>
+
+
 		<p>List tags in repo</p>
 		<form id="listRepoTags">
 			<p><input type="submit" value="List tags"/></p>
