--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,9 +19,14 @@
 		
 		<h2>Tasks</h2>
 		
+		<input type="submit" value="List defined tasks" id="listDefinedTasksButton" /><br />
 		<input type="submit" value="List testing tasks" id="listTestingTasksButton" /><br />
 		<input type="submit" value="List registered tasks" id="listRegisteredTasksButton" /><br />
 		<input type="submit" value="Create new task" id="createTaskButton" /><br />
+
+		<input type="submit" value="Update testing task" id="updateTestingTaskButton" /><br />
+		<input type="submit" value="Poll update process" id="pollUpdateButton" /><br />
+		
 		<input type="submit" value="Register task" id="registerTaskButton" /><br />
 		<input type="submit" value="Poll registration process" id="pollRegistrationButton" /><br />
 		<hr />
