Added an expiry date to repos

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,10 +34,12 @@
 		<h2>Repositories</h2>
 		<p>Commence on a task (create a repository)</p>
 		<form id="startTaskForm">
+			<p>Validity (minutes): <input type="text" id="validity" name="validity"/></p>
 			<p><input type="submit" value="Start task" /></p>
 		</form>
 
 		<form id="startTestingTaskForm">
+			<p>Validity (minutes): <input type="text" id="validityTest" name="validityTest"/></p>
 			<p><input type="submit" value="Start task (use testing version of task)" /></p>
 		</form>
 
