--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -105,7 +105,7 @@
 		
 	</div>
 
-	<div style="float: left; width: 20em">
+	<div style="position: fixed; top: 0px; left: 30em; width: 20em; height:100%">
 		<div id="json">
 		</div>
 
