Added handling of retired tasks, and retiring tasks. Made getTask throw a notfound exception if there is no task with the id

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,6 +39,7 @@
 		<h2>Tasks</h2>
 		
 		<input type="submit" value="List defined tasks" id="listDefinedTasksButton" /><br />
+		<input type="submit" value="List retired tasks" id="listRetiredTasksButton" /><br />
 		<input type="submit" value="List testing tasks" id="listTestingTasksButton" /><br />
 		<input type="submit" value="List registered tasks" id="listRegisteredTasksButton" /><br />
 		<input type="submit" value="Create new task" id="createTaskButton" /><br />
@@ -48,6 +49,9 @@
 		
 		<input type="submit" value="Register task" id="registerTaskButton" /><br />
 		<input type="submit" value="Poll registration process" id="pollRegistrationButton" /><br />
+		
+		<input type="submit" value="Retire task" id="retireTaskButton" /><br />
+		<input type="submit" value="Unretire task" id="unretireTaskButton" /><br />
 		<hr />
 
 		<h2>Repositories</h2>
