--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -125,6 +125,22 @@
 			<p><input type="submit" value="Poll status" id="pollSubmissionButton"/></p>
 		</form> 
 		
+		<h2>Config</h2>
+		<p>Config</p>
+		<form id="setWorkersForm">
+			<p>Number of worker threads: <input type="text" id="workerThreads" name="workerThreads" value="1"/></p>
+			<p><input type="submit" value="Update" /></p>
+		</form>
+		
+		<p>Get work queue</p>
+		<form id="getWorkQueueForm">
+			<p><input type="submit" value="Get work queue" id="getWorkQueue"/></p>
+		</form> 
+		
+		<p>Server Status</p>
+		<form id="serverStatusForm">
+			<p><input type="submit" value="Server status" id="serverStatus"/></p>
+		</form>
 		
 	</div>
 
