Added test interface for registering a remote task

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,6 +52,12 @@
 		
 		<input type="submit" value="Retire task" id="retireTaskButton" /><br />
 		<input type="submit" value="Unretire task" id="unretireTaskButton" /><br />
+
+        <p>Create a remote task</p>
+        <form id="createRemoteTaskForm">
+            <p>Remote URI: <input type="text" id="remoteURI" name="remoteURI" value="ssh://"/>
+            <p><input type="submit" value="Create remote task"/></p>
+        </form>
 		<hr />
 
 		<h2>Repositories</h2>
