Added support for remote repos

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -72,6 +72,12 @@
 			<p><input type="submit" value="Start task (use testing version of task)" /></p>
 		</form>
 
+		<form id="startRemoteTaskForm">
+			<p>Validity (minutes): <input type="text" id="validityRemote" name="validityRemote" value="60"/></p>
+			<p>Remote: <input type="text" id="repoRemote" name="repoRemote" value="ssh://"/></p>
+			<p><input type="submit" value="Start task (remote repo)" /></p>
+		</form>
+
 
 		<p>List tags in repo</p>
 		<form id="listRepoTags">
