--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,16 +64,19 @@
 		<p>Commence on a task (create a repository)</p>
 		<form id="startTaskForm">
 			<p>Validity (minutes): <input type="text" id="validity" name="validity" value="60"/></p>
+			<p>Variant: <input type="text" id="variant" name="variant" value="java"/></p>
 			<p><input type="submit" value="Start task" /></p>
 		</form>
 
 		<form id="startTestingTaskForm">
 			<p>Validity (minutes): <input type="text" id="validityTest" name="validityTest" value="60"/></p>
+			<p>Variant: <input type="text" id="variantTest" name="variantTest" value="java"/></p>
 			<p><input type="submit" value="Start task (use testing version of task)" /></p>
 		</form>
 
 		<form id="startRemoteTaskForm">
 			<p>Validity (minutes): <input type="text" id="validityRemote" name="validityRemote" value="60"/></p>
+			<p>Variant: <input type="text" id="variantRemote" name="variantRemote" value="java"/></p>
 			<p>Remote: <input type="text" id="repoRemote" name="repoRemote" value="ssh://"/></p>
 			<p><input type="submit" value="Start task (remote repo)" /></p>
 		</form>
