Added action to internal front-end

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,6 +33,7 @@
 		<p>TaskSHA1: <input type="text" id="tasksha1" value="HEAD"/></p> 
 		<p>RepoId: <input type="text" id="repoId"/></p>
 		<p>RepoTag: <input type="text" id="repoTag" value="HEAD"/></p>
+		<p>Action: <input type="text" id="action" value="validate"/></p>
 		<p>SubmissionTag: <input type="text" id="submissionTag"/></p>
 		<hr />
 		
