Add API for getting files from task skeleton

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,6 +59,14 @@
             <p>Remote URI: <input type="text" id="remoteURI" name="remoteURI" value="ssh://"/>
             <p><input type="submit" value="Create remote task"/></p>
         </form>
+
+		<p>Task Files</p>
+		<p>Variant: <input type="text" id="variantTask" name="variantTask" value="java"/></p>
+		<p>Registered: <input type="checkbox" id="registeredTask" name="registeredTask" value="java"/></p>
+		<input type="submit" value="List files for task skeleton" id="listTaskFilesButton" /><br />
+		<p>File name: <input type="text" id="taskFileName" name="taskFileName" value=""/></p>
+		<input type="submit" value="Get file for task skeleton" id="getTaskFileButton" /><br />
+
 		<hr />
 
 		<h2>Repositories</h2>
