Make repo initialisation asynchronous

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -90,6 +90,10 @@
 			<p><input type="submit" value="Start task (remote repo)" /></p>
 		</form>
 
+		<p>Get repo status</p>
+		<form id="getRepoStatus">
+			<p><input type="submit" value="Get repo status"/></p>
+		</form>
 
 		<p>List tags in repo</p>
 		<form id="listRepoTags">
