updated test interface to show new pubkey api

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -166,7 +166,12 @@
 		<form id="serverStatusForm">
 			<p><input type="submit" value="Server status" id="serverStatus"/></p>
 		</form>
-		
+
+		<p>Public SSH Key</p>
+		<form id="serverPublicKeyForm">
+			<p><input type="submit" value="Public SSH Key" id="publicKey"/></p>
+		</form>
+
 	</div>
 
 	<div style="position: fixed; top: 0px; left: 30em; width: 20em; height:100%">
