--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -174,7 +174,7 @@
 
 	</div>
 
-	<div style="position: fixed; top: 0px; left: 30em; width: 20em; height:100%">
+	<div style="float:left; top: 0px; left: 30em; width: 20em; height:100%">
 		<div id="json">
 		</div>
 
